<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    app:cardCornerRadius="6dp"
    app:cardElevation="6dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/colorAccent"
        android:layout_margin="5dp"
        android:padding="5dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/idDeber"
                android:textSize="@dimen/tsize_documento"
                android:textStyle="bold"
                android:layout_weight="1.5"
                android:textColor="@android:color/white"/>

            <TextView
                android:id="@+id/txt_IDdeber_notaDeber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/idDeber"
                android:text=""
                android:textSize="@dimen/tsize_documento"
                android:textStyle="bold"
                android:layout_weight=".8"
                android:textColor="@android:color/white"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ID_Estudiante"
                android:textSize="@dimen/tsize_documento"
                android:textStyle="bold"
                android:layout_weight="1.5"
                android:textColor="@android:color/white"/>

            <TextView
                android:id="@+id/txt_IdEstudiante_notaDeber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/NombreCurso"
                android:text=""
                android:textSize="@dimen/tsize_documento"
                android:textStyle="bold"
                android:layout_weight=".8"
                android:textColor="@android:color/white"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/IDEjercicio"
                android:textSize="@dimen/tsize_documento"
                android:textStyle="bold"
                android:layout_weight="1.5"
                android:textColor="@android:color/white"/>

            <TextView
                android:id="@+id/txt_id_Ejercicio_notaDeber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/IDEjercicio"
                android:text=""
                android:textSize="@dimen/tsize_documento"
                android:textStyle="bold"
                android:layout_weight=".8"
                android:textColor="@android:color/white"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nota"
                android:textSize="@dimen/tsize_documento"
                android:textStyle="bold"
                android:layout_weight="1.5"
                android:textColor="@android:color/white"/>

            <TextView
                android:id="@+id/txt_nota_notaDeber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/nota"
                android:text=""
                android:textSize="@dimen/tsize_documento"
                android:textStyle="bold"
                android:layout_weight=".8"
                android:textColor="@android:color/white"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/fecha"
                android:textSize="@dimen/tsize_documento"
                android:textStyle="bold"
                android:layout_weight="1.5"
                android:textColor="@android:color/white"/>

            <TextView
                android:id="@+id/txt_fecha_notaDeber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/fecha"
                android:text=""
                android:textSize="@dimen/tsize_documento"
                android:textStyle="bold"
                android:layout_weight=".8"
                android:textColor="@android:color/white"/>

        </LinearLayout>
    </LinearLayout>


</android.support.v7.widget.CardView>