<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="20dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="@color/colorPrimary"
        android:orientation="vertical"
        android:padding="5dp">

        <LinearLayout
            android:id="@+id/ll_idgrupo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1.5"
                android:text="@string/idGrupo"
                android:textColor="@android:color/white"
                android:textSize="@dimen/tsize_documento"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txt_GrupoEst_IdGrupo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight=".8"
                android:hint="@string/idGrupo"
                android:text=""
                android:textColor="@android:color/white"
                android:textSize="@dimen/tsize_documento"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_NombreGrupo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ll_idgrupo"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1.5"
                android:text="@string/NombreGrupo"
                android:textColor="@android:color/white"
                android:textSize="@dimen/tsize_documento"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txt_GrupoEst_NombreGrupo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight=".8"
                android:hint="@string/NombreGrupo"
                android:text=""
                android:textColor="@android:color/white"
                android:textSize="@dimen/tsize_documento"
                android:textStyle="bold" />

        </LinearLayout>


        <RelativeLayout
            android:id="@+id/ll_cantEstGrupo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ll_NombreGrupo"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txt_CantEstudiantes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/idGrupoCant"
                android:textColor="@android:color/white"
                android:textSize="@dimen/tsize_documento"
                android:textStyle="bold"
                android:layout_alignParentLeft="true"/>

            <TextView
                android:id="@+id/txt_GrupoEst_Cant_Estu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"

                android:layout_centerHorizontal="true"
                android:layout_marginRight="52dp"
                android:hint="@string/idGrupoCant"
                android:text=""
                android:textColor="@android:color/white"
                android:textSize="@dimen/tsize_documento"
                android:textStyle="bold" />

        </RelativeLayout>


    </RelativeLayout>

</android.support.v7.widget.CardView>